make scroll jumping fix more elegant

--- a/src/components/styles-content.css
+++ b/src/components/styles-content.css
@@ -1,5 +1,8 @@
-.portfolio-container {
-  position: relative;
+.main-container {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .content-container {
